<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.sunrise.game</groupId>
        <artifactId>sunrise-game-frame</artifactId>
        <version>1.0</version>
    </parent>

    <artifactId>center</artifactId>
    <version>${project.sunrise.version}</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.sunrise.game</groupId>
            <artifactId>network</artifactId>
            <version>${project.sunrise.version}</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <!-- 启用完整的注解处理 -->
                        <arg>-proc:full</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- 添加maven-assembly-plugin插件 -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <!-- 绑定到打包生命周期阶段上 -->
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>sunrise-center</finalName>
                            <outputDirectory>${project.basedir}/../start/jar</outputDirectory>
                            <!-- 指定打包方式为jar -->
                            <archive>
                                <manifest>
                                    <!-- 指定主类 -->
                                    <mainClass>org.sunrise.game.main.CenterServerStartUp</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <!-- 指定打包成jar包 -->
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>